change package.json in 2.4 Qr project

--- a/Backend/2.4 QR Code Project/package.json
+++ b/Backend/2.4 QR Code Project/package.json
@@ -9,6 +9,8 @@
   "main": "index.js",
   "devDependencies": {},
   "scripts": {
+    "build": "cd Backend && cd '2.4 QR Code Project' && npm install && npm run build",
+    "start": "nodemon solution.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
