change package.json in 2.4 Qr project

--- a/Backend/2.4_QR_Code_Project/package.json
+++ b/Backend/2.4_QR_Code_Project/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "build": "npm install",
-    "start": "nodemon solution.js",
+    "start": "node solution.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
