--- a/Backend/5.4_API_Authentication/package.json
+++ b/Backend/5.4_API_Authentication/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "npm install",
-    "start": "node solution.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm i && npm run build",
+    "start": "node solution.js"
   },
   "keywords": [],
   "author": "",
