--- a/Backend/6.1-Blog-API-Project/package.json
+++ b/Backend/6.1-Blog-API-Project/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm i",
-    "start": "node server.js && node solution.js"
+    "start": "node solution.js && node server.js"
   },
   "keywords": [],
   "author": "",
