--- a/Backend/8.2 Postgres Read/package.json
+++ b/Backend/8.2 Postgres Read/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3"
