--- a/Backend/5.3 Axios/package.json
+++ b/Backend/5.3 Axios/package.json
@@ -17,6 +17,8 @@
   "author": "",
   "contributors": [],
   "scripts": {
+    "build": "npm i",
+    "start": "node solution.js",
     "dev": "",
     "test": ""
   },
