--- a/Backend/4.4 Band Generator Project/package.json
+++ b/Backend/4.4 Band Generator Project/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm i",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
